--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
-p {
-  color: red; 
+html, body {
+  min-height: 100%; 
+  font-weight: 300; 
 }
+
+body {
+  font-family: 'Tahoma, Geneva', sans-serif; 
+  margin: 0; 
+  padding: 20px; 
+  
+  page-title {
+    text-align: left;
+  }
+  
+ main {
+   font-family: 'Tahoma, Geneva', sans-serif; 
+  }
+  
+contact-information {
+  
+}
+
+contact-photo { 
+  border: 0.75px solid #000000;
+  float: right; 
+}
+
+
+work experience {
+  }
+  
+  
