--- a/style.css
+++ b/style.css
@@ -1,32 +1,39 @@
 html, body {
   min-height: 100%; 
-  font-weight: 300; 
+  font-weight: 150;
 }
 
 body {
   font-family: 'Tahoma, Geneva', sans-serif; 
   margin: 0; 
-  padding: 20px; 
+  padding: 20px 0 0 0; 
   
   page-title {
-    text-align: left;
+    text-align: Left;
+    font-weight: inherit;
   }
   
  main {
    font-family: 'Tahoma, Geneva', sans-serif; 
+   font-size: 15px;
   }
   
 contact-information {
+  font-size: 8px;
+  float: left;
   
 }
 
 contact-photo { 
   border: 0.75px solid #000000;
   float: right; 
-}
+  height: 25%;
+  width: auto;
+  }
 
 
 work experience {
+  font-size: 20px
   }
   
   
