--- a/style.css
+++ b/style.css
@@ -1,39 +1,52 @@
-html, body {
-  min-height: 100%; 
-  font-weight: 150;
+body{
+  background-color: lightgray;
+  font-family: 'Tahoma, Geneva', sans-serif;
 }
 
-body {
-  font-family: 'Tahoma, Geneva', sans-serif; 
-  margin: 0; 
-  padding: 20px 0 0 0; 
-  
-  page-title {
-    text-align: Left;
-    font-weight: inherit;
-  }
-  
- main {
-   font-family: 'Tahoma, Geneva', sans-serif; 
-   font-size: 15px;
-  }
-  
-contact-information {
-  font-size: 8px;
-  float: left;
-  
+#page-title{
+  font-size:40px;
+  text-align:center;
 }
 
-contact-photo { 
-  border: 0.75px solid #000000;
-  float: right; 
-  height: 25%;
+#contact-information{
+  font-size:12px;
+  text-align: center;
+  wordflow-wrap: break-word;
+}
+
+img{
+  height:150px;
   width: auto;
+  border-style: double; 
+  border-color: black;
+  float:right;
+}
+  
+.header{
+  overflow:auto;
   }
+  
+h1{
+  text-align:left;    
+}
+
+.Work-Experience{
+  text-decoration: underline;
+}
+
+.job-title{
+  padding-left:20px;
+}
+
+.dates{ 
+  font-size:15px;
+  padding-left:20px;
+}
+
+ul{
+   list-style-type: square;
+}
 
 
-work experience {
-  font-size: 20px
-  }
   
   
