--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ img{
   border-style: double; 
   border-color: black;
   float:right;
+  position: relative; 
+  left: -40px
 }
   
 .header{
@@ -32,6 +34,7 @@ h1{
 
 .Work-Experience{
   text-decoration: underline;
+  padding-bottom: 30px;
 }
 
 .job-title{
@@ -46,7 +49,3 @@ h1{
 ul{
    list-style-type: square;
 }
-
-
-  
-  
